# FUR-Matrix-01

./: .codexrc.json  .copilot-prompt.txt  .env  .env.example  .gitignore  .nixpacks.toml  .pre-commit-config.yaml  .replit  .secrets.baseline  AGENTS.md  AI_Intro-Image.json  CHANGELOG.md  Codex-Spezifikation.md  Dockerfile  Fehlende_ENV_LOG.md  LICENSE  Makefile  OAUTH_ERROR_HANDLING.md  OAUTH_TOKEN_ISSUES.md  Procfile  README.md  README.txt  README_CODEX.md  abort_merge.sh  activate_codex_autopilot.py  app.js  app_factory.py  bun.lockb  client_secret.json  codex-bootstrap.sh  codex-fur.json  codex.config.toml  codex.tasks.yaml  codex_fix_dependencies.py  config.py  daily_log_generator.py  database.py  diagnostic_tool.py  discord_util.py  docker-compose.codex.yml  (+38 more)
.copilot/: config.json
.devcontainer/: devcontainer.json
.github/: action.yaml  copilot-instructions.md  dependabot.yaml  dotslash-config.json  openapi.yaml
Wissen/: Angebot Weinverkostung_Tänzer.txt
agents/: Inbox_Agent.py  README.md  access_agent.py  access_argend.md  agent_core.py  agenten_loader.py  auth_agent.py  auth_argend.md  champion_agent.py  deployment_agent.py  dialog_agent.py  dialog_argend.md  inbox_agent.py  log_agent.py  log_argend.md  main_app.py  migration_agent.py  monitoring_agent.py  poster_agent.py  poster_argend.md  pvp_meta_agent.py  pvp_meta_argend.md  reminder_agent.py  reminder_argend.md  scheduler_agent.py  tagging_agent.py  test_agents_init.py  translation_agent.py  webhook_agent.py  webhook_argend.md
blueprints/: __init__.py  admin.py  admin_routes.py  api_events.py  (+9 more)
(+587 files in other folders)
